[gd_scene load_steps=3 format=3 uid="uid://bv8fxe0dvdyvv"]

[ext_resource type="Script" uid="uid://bxn7tyil5njvs" path="res://menu/join_menu.gd" id="1_pr7lf"]

[sub_resource type="Theme" id="Theme_hv2ko"]

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pr7lf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -94.0
offset_right = 138.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_hv2ko")

[node name="Title" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"
fit_content = true

[node name="HostName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "Host"

[node name="Alias" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Alias"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "start"

[node name="Cancel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "cancel"

[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
